<resources>

    <string name="no_item_on_filter">There is no item for this filter.</string>
    <string name="share_code">Code</string>
    <string name="share_amount">Amount</string>
    <string name="share_price">Price</string>
    <string name="add_position">Add position</string>
    <string name="final_balance">Final Balance</string>
    <string name="menu_filter">Filter</string>
    <string name="save">Save</string>
    <string name="share_purchase_price">Purchase price</string>
    <string name="share_current_price">Current price</string>
    <string name="delete">Delete</string>
    <string name="investment">Investment</string>
    <string name="stock_chart">Chart</string>
    <string name="close">Close</string>
    <string name="question_delete">Do you want to delete this stock?</string>
    <string name="question_close">Do you want to close this stock?</string>
    <string name="confirmation">Confirmation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
