<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="stockShare"
            type="com.mctech.stocktradetracking.domain.stock_share.entity.StockShare" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlShareCode"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/share_code"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etShareCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="1"
                android:maxLength="10"
                android:singleLine="true"
                android:text="@{stockShare.code}"
                android:textAllCaps="true"
                tools:text="MGLU3" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlShareAmount"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/share_amount"
            app:layout_constraintTop_toBottomOf="@id/tlShareCode">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etShareAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:lines="1"
                android:text='@{stockShare.shareAmount + ""}'
                android:maxLength="10"
                tools:text="300"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlSharePurchasePrice"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/share_purchase_price"
            app:layout_constraintTop_toBottomOf="@id/tlShareAmount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSharePurchasePrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:lines="1"
                android:maxLength="10"
                android:singleLine="true"
                android:text='@{stockShare.purchasePrice +""}'
                tools:text="50,21" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlSharePrice"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/share_current_price"
            app:layout_constraintTop_toBottomOf="@id/tlSharePurchasePrice">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSharePrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:lines="1"
                android:maxLength="10"
                android:singleLine="true"
                android:text='@{stockShare.salePrice +""}'
                tools:text="50,21" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btUpdateStockPrice"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/save"
            app:layout_constraintTop_toBottomOf="@id/tlSharePrice" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>